# quake-log-demo

./: Cargo.toml  README.md  index.html
pkg/: quake_log_demo_lib_bg.wasm
server/: index.js  package-lock.json  package.json
src/: lib.rs  main.rs
src/analysis/: mod.rs  report.rs
src/analysis/report/: death_types.rs  mod.rs  test.rs
www/: index.html
www/pkg/: quake_log_demo_lib.js
