[package]
name = "quake-log-challenge"
version = "0.1.0"
edition = "2021"
# cargo-features = ["edition2021"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
wasm-bindgen = "0.2.80"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
